fix: rebuild title reigns from segment history at startup (ATW-z2x2 data repair)
Adds TitleReignRepairService, a one-time startup repair guarded by a
GameSetting flag. Segment-backed reigns are wiped and rebuilt by replaying
each title's is_title_segment matches in chronological order, fixing the
ATW-z2x2 partial-champion tag team bug and reigns whose dates were stamped
with real-world adjudication time instead of the in-game show date.

Reigns with no won_at_segment_id link predate that column (added by a later
migration and never backfilled) and are genuine pre-migration history — they
are preserved, with consecutive same-champion runs collapsed into a single
reign to undo fragmentation from repeated real-world-timestamped re-saves.

Also fixes reign-duration display (RankingService, TitleService) to use the
tracked in-game date instead of the real wall-clock date.